# metamesh

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/beam-modeling-interview/: SKILL.md
.claude/skills/cbc-modeling-interview/: SKILL.md
.claude/skills/dimension-fact-identification/: SKILL.md
.claude/skills/dv-implementation-design/: SKILL.md
.claude/skills/nbr-identification/: SKILL.md
.claude/skills/ontology-review/: SKILL.md
.claude/skills/ontology-visualize/: SKILL.md
.claude/skills/star-schema-design/: SKILL.md
.github/workflows/: gitleaks.yml  test.yml
docs/: PROJECT_CONTEXT.md
docs/references/: README.md
ontology/concepts/: Channel.jsonld  Clip.jsonld  Collaboration.jsonld  Organization.jsonld  Stream.jsonld  Streamer.jsonld  Topic.jsonld
ontology/relationships/: belongs_to_org.jsonld  categorized_as.jsonld  derived_from.jsonld  hosts_stream.jsonld  owns_channel.jsonld  participates_in.jsonld
output/dbt/: schema.yml
output/llm_context/: context.md
output/semantic_layer/: metricflow.yml
output/validation/: holodex_coverage.md
scripts/: validate_holodex.py
src/metamesh/: __init__.py  server.py
src/metamesh/generators/: __init__.py  _common.py  dbt_yaml.py  llm_context.py  semantic_layer.py
src/metamesh/ontology/: store.py
src/metamesh/queries/: __init__.py  concept.py
src/metamesh/tools/: add_concept.py  (+5 more)
tests/: test_add_concept.py  test_add_relationship.py  test_export_llm_context.py  test_generate_dbt_yaml.py  test_generate_semantic_layer.py  test_query_concept.py
